--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <div class="info-content">
           <h1 class="name" title="Ahmede Sidi Abderrahmane">Ahmede Sidi Abderrahmane</h1>
-          <p class="title">Business Analyst</p>
+          <p class="title">Energy Specialist</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
