--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Ahmede Sidi Abderrahmane">Ahmede Sidi Abderrahmane</h1>
-          <p class="title">Energy Specialist</p>
+          <h1 class="name" title="Sidi Abderrahmane">Ahmede Sidi Abderrahmane</h1>
+          <p class="title">Energy Economist</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
