--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Sidi Abderrahmane">Ahmede Sidi Abderrahmane</h1>
-          <p class="title">Energy Economist</p>
+          <h1 class="name" title="Ahmede Sidi Abderrahmane" style="font-size: 1.2em; line-height: 1.2;">Ahmede Sidi Abderrahmane</h1>
+          <p class="title">Energy Specialist</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
@@ -107,7 +107,7 @@
         </header>
         <section class="about-text">
           <p>
-            I am a passionate and analytical Business Analyst with a strong background in energy economics and management. I hold a Master's degree in Energy Technology and Management from IFP School and have experience in analyzing business needs and implementing effective solutions within the energy sector.
+            I am a passionate and analytical Business development Analyst with a strong background in energy economics and management. I hold a Master's degree in Energy Technology and Management from IFP School and have experience in analyzing business needs and implementing effective solutions within the energy sector.
           </p>
         </section>
 
