--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+  <style>
+    .hidden {
+      display: none;
+    }
+  </style>
 </head>
 
 <body>
@@ -87,16 +92,16 @@
       <nav class="navbar">
         <ul class="navbar-list">
           <li class="navbar-item">
-            <button class="navbar-link active" data-nav-link>About</button>
+            <button class="navbar-link active" data-nav-link="about">About</button>
           </li>
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Resume</button>
+            <button class="navbar-link" data-nav-link="resume">Resume</button>
           </li>
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Portfolio</button>
+            <button class="navbar-link" data-nav-link="portfolio">Portfolio</button>
           </li>
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Contact</button>
+            <button class="navbar-link" data-nav-link="contact">Contact</button>
           </li>
         </ul>
       </nav>
@@ -107,7 +112,7 @@
         </header>
         <section class="about-text">
           <p>
-            I am a passionate and analytical Business development Analyst with a strong background in energy economics and management. I hold a Master's degree in Energy Technology and Management from IFP School and have experience in analyzing business needs and implementing effective solutions within the energy sector.
+            I am a passionate and analytical Business Analyst with a strong background in energy economics and management. I hold a Master's degree in Energy Technology and Management from IFP School and have experience in analyzing business needs and implementing effective solutions within the energy sector.
           </p>
         </section>
 
@@ -145,7 +150,7 @@
         </section>
       </article>
 
-      <article class="resume" data-page="resume">
+      <article class="resume hidden" data-page="resume">
         <header>
           <h2 class="h2 article-title">Resume</h2>
         </header>
@@ -250,7 +255,16 @@
         </section>
       </article>
 
-      <article class="contact" data-page="contact">
+      <article class="portfolio hidden" data-page="portfolio">
+        <header>
+          <h2 class="h2 article-title">Portfolio</h2>
+        </header>
+        <section class="projects">
+          <p>Your portfolio projects will go here.</p>
+        </section>
+      </article>
+
+      <article class="contact hidden" data-page="contact">
         <header>
           <h2 class="h2 article-title">Contact</h2>
         </header>
@@ -271,6 +285,29 @@
       </article>
     </div>
   </main>
+
+  <script>
+    document.querySelectorAll('.navbar-link').forEach(button => {
+      button.addEventListener('click', () => {
+        // Hide all articles
+        document.querySelectorAll('article').forEach(article => {
+          article.classList.add('hidden');
+        });
+
+        // Remove active class from all buttons
+        document.querySelectorAll('.navbar-link').forEach(btn => {
+          btn.classList.remove('active');
+        });
+
+        // Show the selected article
+        const page = button.getAttribute('data-nav-link');
+        document.querySelector(`article[data-page="${page}"]`).classList.remove('hidden');
+
+        // Add active class to the clicked button
+        button.classList.add('active');
+      });
+    });
+  </script>
 
   <script src="./assets/js/script.js"></script>
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
