--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <aside class="sidebar" data-sidebar>
       <div class="sidebar-info">
         <figure class="avatar-box">
-          <img src="./assets/images/my-avatar.png" alt="Ahmede Sidi Abderrahmane" width="80">
+          <img src="./assets/images/my-avatar.jpg" alt="Ahmede Sidi Abderrahmane" width="80">
         </figure>
 
         <div class="info-content">
