--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <div class="info-content">
           <h1 class="name" title="Ahmede Sidi Abderrahmane" style="font-size: 1.2em; line-height: 1.2;">Ahmede Sidi Abderrahmane</h1>
-          <p class="title">Energy Specialist</p>
+          <p class="title">Junior Strategic Energy Consultant</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
@@ -112,7 +112,7 @@
         </header>
         <section class="about-text">
           <p>
-            I am a passionate and analytical Business Analyst with a strong background in energy economics and management. I hold a Master's degree in Energy Technology and Management from IFP School and have experience in analyzing business needs and implementing effective solutions within the energy sector.
+            I am a passionate and analytical Junior Strategic Energy Consultant with a strong foundation in oil and energy, encompassing both economics and engineering. With a degree in Petroleum Engineering and a Master's in Energy Technology Economics and Management from IFP School in Paris, I have experience in analyzing business needs and implementing effective, data-driven solutions. My skills in strategic thinking within the energy sector enable me to navigate complex challenges and contribute to impactful decision-making.
           </p>
         </section>
 
