--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         </section>
       </article>
 
-      <article class="resume hidden" data-page="resume">
+      <article class="resume" data-page="resume">
         <header>
           <h2 class="h2 article-title">Resume</h2>
         </header>
@@ -255,7 +255,7 @@
         </section>
       </article>
 
-      <article class="portfolio hidden" data-page="portfolio">
+      <article class="portfolio" data-page="portfolio">
         <header>
           <h2 class="h2 article-title">Portfolio</h2>
         </header>
@@ -264,7 +264,7 @@
         </section>
       </article>
 
-      <article class="contact hidden" data-page="contact">
+      <article class="contact" data-page="contact">
         <header>
           <h2 class="h2 article-title">Contact</h2>
         </header>
