--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
         </section>
       </article>
 
-      <article class="portfolio" data-page="portfolio">
+      <article class="portfolio hidden" data-page="portfolio">
         <header>
           <h2 class="h2 article-title">Portfolio</h2>
         </header>
@@ -264,7 +264,7 @@
         </section>
       </article>
 
-      <article class="contact" data-page="contact">
+      <article class="contact hidden" data-page="contact">
         <header>
           <h2 class="h2 article-title">Contact</h2>
         </header>
