--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
         </ul>
       </nav>
 
+      <!-- About Section -->
       <article class="about active" data-page="about">
         <header>
           <h2 class="h2 article-title">About Me</h2>
@@ -150,6 +151,7 @@
         </section>
       </article>
 
+      <!-- Resume Section -->
       <article class="resume" data-page="resume">
         <header>
           <h2 class="h2 article-title">Resume</h2>
