--- a/index.html
+++ b/index.html
@@ -151,111 +151,57 @@
         </section>
       </article>
 
-      <!-- Resume Section -->
-      <article class="resume" data-page="resume">
-        <header>
-          <h2 class="h2 article-title">Resume</h2>
-        </header>
+     <!-- Resume Section -->
+<article class="resume hidden" data-page="resume">
+    <header>
+        <h2 class="h2 article-title">Resume</h2>
+    </header>
 
-        <section class="timeline">
-          <div class="title-wrapper">
+    <section class="timeline">
+        <div class="title-wrapper">
             <div class="icon-box">
-              <ion-icon name="book-outline"></ion-icon>
+                <ion-icon name="book-outline"></ion-icon>
             </div>
             <h3 class="h3">Education</h3>
-          </div>
-          <ol class="timeline-list">
+        </div>
+        <ol class="timeline-list">
             <li class="timeline-item">
-              <h4 class="h4 timeline-item-title">IFP School</h4>
-              <span>2022 - 2023</span>
-              <p class="timeline-text">Master of Science, Energy Technology, Economics and Management</p>
+                <h4 class="h4 timeline-item-title">IFP School</h4>
+                <span>2022 - 2023</span>
+                <p class="timeline-text">Master of Science, Energy Technology, Economics and Management</p>
             </li>
             <li class="timeline-item">
-              <h4 class="h4 timeline-item-title">Audencia Business School</h4>
-              <span>Sept 2021 - Dec 2021</span>
-              <p class="timeline-text">Master of Science, Management in the Energy Industry (Joint program with IFP School)</p>
+                <h4 class="h4 timeline-item-title">Audencia Business School</h4>
+                <span>Sept 2021 - Dec 2021</span>
+                <p class="timeline-text">Master of Science, Management in the Energy Industry (Joint program with IFP School)</p>
             </li>
-            <li class="timeline-item">
-              <h4 class="h4 timeline-item-title">National Engineering School of Sfax (ENIS)</h4>
-              <span>2019 - 2021</span>
-              <p class="timeline-text">Bachelor of Engineering, Georesources and Environment</p>
-            </li>
-            <li class="timeline-item">
-              <h4 class="h4 timeline-item-title">Polytechnic School of Nouakchott</h4>
-              <span>2017 - 2019</span>
-              <p class="timeline-text">Bachelor of Engineering, Oil and Gas</p>
-            </li>
-          </ol>
-        </section>
+            <!-- Add more education entries as needed -->
+        </ol>
+    </section>
 
-        <section class="timeline">
-          <div class="title-wrapper">
+    <section class="timeline">
+        <div class="title-wrapper">
             <div class="icon-box">
-              <ion-icon name="briefcase-outline"></ion-icon>
+                <ion-icon name="briefcase-outline"></ion-icon>
             </div>
             <h3 class="h3">Experience</h3>
-          </div>
-          <ol class="timeline-list">
+        </div>
+        <ol class="timeline-list">
             <li class="timeline-item">
-              <h4 class="h4 timeline-item-title">Business Analyst – Carbon Neutrality Strategy & CCS, TotalEnergies</h4>
-              <span>Jun 2023 - May 2024</span>
-              <p class="timeline-text">Coordinated the Long-Term Plan for TotalEnergies' CCS assets and created a comprehensive database on global CCS projects.</p>
+                <h4 class="h4 timeline-item-title">Business Analyst – Carbon Neutrality Strategy & CCS, TotalEnergies</h4>
+                <span>Jun 2023 - May 2024</span>
+                <p class="timeline-text">Coordinated the Long-Term Plan for TotalEnergies' CCS assets and created a comprehensive database on global CCS projects.</p>
             </li>
             <li class="timeline-item">
-              <h4 class="h4 timeline-item-title">Business Analyst & Developer, ScanToSolve</h4>
-              <span>Aug 2022 - Jan 2023</span>
-              <p class="timeline-text">Analyzed user data to identify business needs and pursued new business opportunities.</p>
+                <h4 class="h4 timeline-item-title">Business Analyst & Developer, ScanToSolve</h4>
+                <span>Aug 2022 - Jan 2023</span>
+                <p class="timeline-text">Analyzed user data to identify business needs and pursued new business opportunities.</p>
             </li>
-            <li class="timeline-item">
-              <h4 class="h4 timeline-item-title">Reservoir Engineer Intern, LR3E Laboratory</h4>
-              <span>Feb 2021 - Jul 2021</span>
-              <p class="timeline-text">Analyzed geological data to characterize reservoir properties and evaluated the impact of reservoir anisotropy on fluid flow.</p>
-            </li>
-          </ol>
-        </section>
+            <!-- Add more experience entries as needed -->
+        </ol>
+    </section>
+</article>
 
-        <section class="skill">
-          <h3 class="h3 skills-title">My Skills</h3>
-          <ul class="skills-list content-card">
-            <li class="skills-item">
-              <div class="title-wrapper">
-                <h5 class="h5">Energy Economics</h5>
-                <data value="80">80%</data>
-              </div>
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 80%;"></div>
-              </div>
-            </li>
-            <li class="skills-item">
-              <div class="title-wrapper">
-                <h5 class="h5">Market Research</h5>
-                <data value="70">70%</data>
-              </div>
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 70%;"></div>
-              </div>
-            </li>
-            <li class="skills-item">
-              <div class="title-wrapper">
-                <h5 class="h5">Strategic Management</h5>
-                <data value="90">90%</data>
-              </div>
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 90%;"></div>
-              </div>
-            </li>
-            <li class="skills-item">
-              <div class="title-wrapper">
-                <h5 class="h5">Data Analysis</h5>
-                <data value="85">85%</data>
-              </div>
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 85%;"></div>
-              </div>
-            </li>
-          </ul>
-        </section>
-      </article>
 
       <!-- Portfolio Section -->
       <article class="portfolio hidden" data-page="portfolio">
