--- a/index.html
+++ b/index.html
@@ -47,13 +47,11 @@
 
         <div class="info-content">
           <h1 class="name" title="Ahmede Sidi Abderrahmane">Ahmede Sidi Abderrahmane</h1>
-
           <p class="title">Junior Strategic Energy Consultant</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
           <span>Show Contacts</span>
-
           <ion-icon name="chevron-down"></ion-icon>
         </button>
 
@@ -163,6 +161,46 @@
             enable me to navigate complex challenges and contribute to impactful decision-making.
           </p>
         </section>
+
+        <!--
+          - What I Do section
+        -->
+        <section class="what-i-do">
+          <h3 class="h3">What I Do</h3>
+
+          <ul class="service-list">
+            <li class="service-item">
+              <div class="service-icon-box">
+                <ion-icon name="analytics-outline"></ion-icon>
+              </div>
+              <div class="service-content-box">
+                <h4 class="h4 service-item-title">Market Research</h4>
+                <p class="service-item-text">I conduct thorough market research to provide valuable insights for decision-making in the energy sector.</p>
+              </div>
+            </li>
+
+            <li class="service-item">
+              <div class="service-icon-box">
+                <ion-icon name="clipboard-outline"></ion-icon>
+              </div>
+              <div class="service-content-box">
+                <h4 class="h4 service-item-title">Strategic Planning</h4>
+                <p class="service-item-text">I excel at creating strategic plans that align business objectives with the latest energy trends and insights.</p>
+              </div>
+            </li>
+
+            <li class="service-item">
+              <div class="service-icon-box">
+                <ion-icon name="stats-chart-outline"></ion-icon>
+              </div>
+              <div class="service-content-box">
+                <h4 class="h4 service-item-title">Data Analysis</h4>
+                <p class="service-item-text">Using advanced data analysis tools, I interpret energy market data to enhance performance and outcomes.</p>
+              </div>
+            </li>
+          </ul>
+        </section>
+
       </article>
 
       <!--
