--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+
+  <style>
+    .name {
+      font-size: 20px; /* Adjust font size to fit the name */
+      white-space: normal; /* Allow wrapping of text */
+      word-break: break-word; /* Ensure long names break correctly */
+    }
+  </style>
 </head>
 
 <body>
@@ -42,7 +50,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/my-avatar.png" alt="Ahmede Sidi Abderrahmane" width="80">
+          <img src="assets/images/my-avatar.jpg" alt="Ahmede Sidi Abderrahmane" width="80">
         </figure>
 
         <div class="info-content">
