--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
           nav.classList.remove("active");
         });
 
-        targetSection.classList.add("active");
+        document.getElementById(targetSection).classList.add("active");
         link.classList.add("active");
       });
     });
