--- a/index.html
+++ b/index.html
@@ -14,11 +14,27 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
 
   <style>
-    /* Adjust the font size of the full name */
+    /* Adjust the font size and color of the full name */
     .name {
-      font-size: 14px; /* Smaller font size for the full name */
+      font-size: 12px; /* Smaller font size for the full name */
+      color: #ffffff; /* Lighter color for visibility */
       white-space: normal; /* Allow the name to wrap */
       word-break: break-word; /* Ensure long names are wrapped */
+    }
+
+    /* Set the text color for better visibility */
+    .title, .contact-link, .contact-title, .address, .navbar-link {
+      color: #ffffff; /* Set text to white or light color */
+    }
+
+    /* Highlight active navbar link */
+    .navbar-link.active {
+      color: #00bcd4; /* Set active navbar link to cyan */
+    }
+
+    /* Set the background color to ensure readability */
+    body {
+      background-color: #2a2a2a; /* Dark background */
     }
 
     /* Set the default state of sections (hidden) */
@@ -41,6 +57,40 @@
 
     section {
       padding: 20px;
+    }
+
+    /* Styling for experience and education lists */
+    .experience-list, .education-list {
+      list-style-type: none;
+      padding: 0;
+    }
+
+    .experience-item, .education-item {
+      margin-bottom: 20px;
+    }
+
+    .job-title, .degree-title {
+      font-weight: bold;
+      color: #00bcd4; /* Cyan for titles */
+    }
+
+    .company, .institution {
+      font-style: italic;
+      color: #ffffff;
+    }
+
+    .date {
+      color: #b0bec5; /* Lighter gray for dates */
+    }
+
+    .responsibilities {
+      margin-top: 5px;
+      padding-left: 20px;
+      color: #ffffff;
+    }
+
+    .responsibilities li {
+      margin-bottom: 5px;
     }
   </style>
 </head>
@@ -135,15 +185,64 @@
       <!-- Resume Section -->
       <section id="resume">
         <h2>Resume</h2>
+
+        <!-- Education Section -->
         <h3>Education</h3>
-        <p>Master of Science in Energy Technology Economics and Management, IFP School (2022 - 2023)</p>
-        <p>Master of Science in Management in the Energy Industry, Audencia Business School (2021)</p>
-        <p>Bachelor of Engineering in Georesources and Environment, National Engineering School of Sfax (2019 - 2021)</p>
-        <p>Bachelor of Engineering in Oil and Gas, Polytechnic School of Nouakchott (2017 - 2019)</p>
+        <ul class="education-list">
+          <li class="education-item">
+            <p class="degree-title">Master of Science in Energy Technology Economics and Management</p>
+            <p class="institution">IFP School, Paris</p>
+            <p class="date">2022 - 2023</p>
+          </li>
+          <li class="education-item">
+            <p class="degree-title">Master of Science in Management in the Energy Industry</p>
+            <p class="institution">Audencia Business School, Nantes</p>
+            <p class="date">Sept 2021 - Dec 2021</p>
+          </li>
+          <li class="education-item">
+            <p class="degree-title">Bachelor of Engineering in Georesources and Environment</p>
+            <p class="institution">National Engineering School of Sfax, Tunisia</p>
+            <p class="date">2019 - 2021</p>
+          </li>
+          <li class="education-item">
+            <p class="degree-title">Bachelor of Engineering in Oil and Gas</p>
+            <p class="institution">Polytechnic School of Nouakchott, Mauritania</p>
+            <p class="date">2017 - 2019</p>
+          </li>
+        </ul>
+
+        <!-- Experience Section -->
         <h3>Experience</h3>
-        <p>Business Analyst at TotalEnergies, Paris (2023 - 2024)</p>
-        <p>Business Analyst & Developer at ScanToSolve (2022 - 2023)</p>
-        <p>Reservoir Engineer Intern at LR3E Laboratory (2021)</p>
+        <ul class="experience-list">
+          <li class="experience-item">
+            <p class="job-title">Business Analyst - Carbon Neutrality Strategy & CCS</p>
+            <p class="company">TotalEnergies, Paris</p>
+            <p class="date">2023 - 2024</p>
+            <ul class="responsibilities">
+              <li>Developed strategic roadmaps for carbon neutrality and implemented CCS initiatives.</li>
+              <li>Coordinated cross-functional teams to align carbon neutrality strategies with business goals.</li>
+            </ul>
+          </li>
+          <li class="experience-item">
+            <p class="job-title">Business Analyst & Developer</p>
+            <p class="company">ScanToSolve</p>
+            <p class="date">2022 - 2023</p>
+            <ul class="responsibilities">
+              <li>Worked on application development and data analysis to improve user experience.</li>
+              <li>Led market research to identify customer needs and opportunities for product improvements.</li>
+            </ul>
+          </li>
+          <li class="experience-item">
+            <p class="job-title">Reservoir Engineer Intern</p>
+            <p class="company">LR3E Laboratory, Sfax</p>
+            <p class="date">Feb 2021 - Jul 2021</p>
+            <ul class="responsibilities">
+              <li>Conducted reservoir simulations and analyzed field data to optimize oil recovery.</li>
+              <li>Prepared technical reports on reservoir performance and suggested methods to improve extraction rates.</li>
+            </ul>
+          </li>
+        </ul>
+
       </section>
 
       <!-- Portfolio Section -->
